tools/tests/errors/surf_cls_05.ki
# a class body referencing an undefined name is a name error
class C:
    var x = undefinedthing
